# ChessEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: bitboard.h  bitboard.hpp  board.hpp  engine.hpp  evaluation.h  move.h  movegen.hpp  search.h  util.hpp  zobrist.h
src/: attacks.cpp  bitboard.cpp  bitboard_display.cpp  bitboard_king.cpp  bitboard_knight.cpp  bitboard_misc.cpp  bitboard_pawn.cpp  bitboard_sliding.cpp  board.cpp  engine.cpp  evaluation.cpp  main.cpp  movegen.cpp  search.cpp  util.cpp  zobrist.cpp
tests/: CMakeLists.txt  board_init.cpp  engine_test.cpp  movegen_test.cpp  test_env.cpp
